# peoplenet_onnx_to_tflite

./: README.md  conv_quantized_tflite.py  remove_suffix.py  requirements.txt.  resnet34_peoplenet_int8.tflite  tflite_infer.py  tflite_infer_with_raw_float.py
cpp_infer_mnist/: CMakeLists.txt
cpp_infer_mnist/resource/: conv_mnist.tflite
cpp_infer_peoplenet/: CMakeLists.txt  peoplenet_main.cpp
saved_model/: fingerprint.pb  resnet34_peoplenet_int8_mod_dynamic_range_quant.tflite  resnet34_peoplenet_int8_mod_full_integer_quant.tflite  resnet34_peoplenet_int8_mod_full_integer_quant_with_int16_act.tflite  resnet34_peoplenet_int8_mod_integer_quant.tflite  resnet34_peoplenet_int8_mod_integer_quant_with_int16_act.tflite
saved_model/variables/: variables.data-00000-of-00001  variables.index
